--- a/application/src/app/components/sidebar/sidebar.component.html
+++ b/application/src/app/components/sidebar/sidebar.component.html
@@ -19,19 +19,19 @@
         <a class="item" [routerLinkActive]="['active']" [routerLink]="['/consumers']">
             <i class="users icon"></i> Klienci
         </a>
-        <a class="item">
+        <a class="item" [routerLinkActive]="['active']" [routerLink]="['/vehicles']">
             <i class="car icon"></i> Pojzady
         </a>
-        <a class="item">
+        <a class="item" [routerLinkActive]="['active']" [routerLink]="['/employees']">
             <i class="user icon"></i> Pracownicy
         </a>
-        <a class="item">
+        <a class="item" [routerLinkActive]="['active']" [routerLink]="['/services']">
             <i class="configure icon"></i> Usługi
         </a>
-        <a class="item">
+        <a class="item" [routerLinkActive]="['active']" [routerLink]="['/stores']">
             <i class="grid layout icon"></i> Magazyn
         </a>
-        <a class="item">
+        <a class="item" [routerLinkActive]="['active']" [routerLink]="['/tires']">
             <i class="selected radio icon"></i> Opony
         </a>
         <a class="item" [routerLinkActive]="['active']" routerLink="/timetable">
