--- a/application/src/app/components/documents/document.component.html
+++ b/application/src/app/components/documents/document.component.html
@@ -1,6 +1,9 @@
 <div class="ui grid">
     <div class="four wide column">
         <div class="ui segment">
+            <div class="ui active inverted dimmer" *ngIf="documentDataLoading">
+                <div class="ui loader"></div>
+            </div>
             <h2 class="ui horizontal divider header">{{ document.number }}</h2>
             <div class="ui right floated icon button mini"><i class="write icon"></i></div>
             <b>Wystawiono:</b> {{ document.date | date: 'dd/MM/yyyy' }}
@@ -15,6 +18,9 @@
             <br>
         </div>
         <div class="ui segment">
+            <div class="ui active inverted dimmer" *ngIf="userDataLoading">
+                <div class="ui loader"></div>
+            </div>
             <h3 class="ui horizontal divider header">Sprzedawca</h3>
             <p>
                 {{userData.name}}
