--- a/application/src/app/components/vehicles/vehicles.component.html
+++ b/application/src/app/components/vehicles/vehicles.component.html
@@ -74,6 +74,6 @@
         </tr>
     </tfoot>
 </table>
-<div class="ui green labeled icon button">
+<div class="ui green labeled icon button" [routerLink]="['/vehicles/add']">
     <i class="car icon"></i> Nowy pojazd
 </div>
