--- a/application/src/app/components/consumers/consumers.component.html
+++ b/application/src/app/components/consumers/consumers.component.html
@@ -59,7 +59,7 @@
     <tfoot>
         <tr>
             <th colspan="8">
-                <button class="ui  red labeled icon button" [disabled]="isDelete()" (click)="deleteChecked()">
+                <button class="ui  red labeled icon button" [disabled]="isDelete() || deleteLoading" [ngClass]="{'loading': deleteLoading}" (click)="deleteChecked()">
                     <i class="trash icon"></i> Usuń
                 </button>
                 <div class="ui right floated pagination menu small">
@@ -78,6 +78,6 @@
         </tr>
     </tfoot>
 </table>
-<div class="ui green labeled icon button">
+<div class="ui green labeled icon button" [routerLink]="['/consumers/add']">
     <i class="user icon"></i> Nowy klient
 </div>
