Store, services, employees

--- a/application/src/app/components/documents/document.component.html
+++ b/application/src/app/components/documents/document.component.html
@@ -45,6 +45,6 @@
         </div>
     </div>
     <div class="twelve wide column">
-        <document-positions [id]=id [document]=document></document-positions>
+        <document-positions [id]=id></document-positions>
     </div>
 </div>
