--- a/application/src/app/components/consumers/consumers.component.html
+++ b/application/src/app/components/consumers/consumers.component.html
@@ -63,16 +63,21 @@
                     <i class="trash icon"></i> Usuń
                 </button>
                 <div class="ui right floated pagination menu small">
-                    <a class="icon item">
+                    <a class="item" (click)="page(1)" [ngClass]="{'disabled': (actualPage<=1)}">
+          Pierwsza
+        </a>
+                    <a class="icon item" (click)="page(actualPage-1)" [ngClass]="{'disabled': (actualPage<=1)}">
                         <i class="left chevron icon"></i>
                     </a>
-                    <a class="item">1</a>
-                    <a class="item">2</a>
-                    <a class="item">3</a>
-                    <a class="item">4</a>
-                    <a class="icon item">
+                    <span *ngFor="let button of pagesButtons">
+            <a class="item" [ngClass]="{'active': (button==actualPage)}" (click)="page(button)">{{button}}</a>
+        </span>
+                    <a class="icon item" (click)="page(actualPage+1)" [ngClass]="{'disabled': (actualPage>=pages)}">
                         <i class="right chevron icon"></i>
                     </a>
+                    <a class="item" (click)="page(pages)" [ngClass]="{'disabled': (actualPage>=pages)}">
+          Ostatnia
+        </a>
                 </div>
             </th>
         </tr>
